--- a/html/login.html
+++ b/html/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <title>Assemble</title>
 </head>
 <body>
@@ -19,6 +19,6 @@
 
         <button onclick="window.location.href='registration.html'">회원가입</button>
     </div>
-    <script src="login.js"></script>
+    <script src="../js/login.js"></script>
 </body>
 </html>
