feat : 모임 저장 페이지 추가

--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,9 @@
     <title>Assemble</title>
 </head>
 <body>
-    <div id="app"></div>
+    <div id="app">
+        <button onclick="window.location.href='partySave.html'">모임생성</button>
+    </div>
     <script src="../js/partys.js"></script>
 </body>
 </html>
