--- a/html/index.html
+++ b/html/index.html
@@ -8,8 +8,11 @@
 </head>
 <body>
     <div id="app">
+    </div>
+    <div>
         <button onclick="window.location.href='partySave.html'">모임생성</button>
     </div>
+    
     <script src="../js/partys.js"></script>
 </body>
 </html>
