--- a/src/html/partyDetails.html
+++ b/src/html/partyDetails.html
@@ -7,10 +7,16 @@
 </head>
 <body>
     <div id="partyDetailsContainer"></div>
+    <div id="partyMemberContainer"></div>
     <div>
-        <button type="button">초대장 생성</button>
+        <button type="button" id="createInvitationBtn">초대장 생성</button>
+    </div>
+    <div>
+        <button type="button" id="joinPartyBtn">가입하기</button>
     </div>
     <script src="../js/partyDetails.js"></script>
     <script src="../js/invitation.js"></script>
+    <!-- <script src="../js/partyJoin.js"></script> -->
+    <script src="../js/partyMemberSave.js"></script>
 </body>
 </html>
