refactor : 상대경로 -> 절대경로 변경

--- a/src/html/login.html
+++ b/src/html/login.html
@@ -19,6 +19,6 @@
 
         <button onclick="window.location.href='registration.html'">회원가입</button>
     </div>
-    <script src="../js/login.js"></script>
+    <script src="/src/js/login.js"></script>
 </body>
 </html>
