--- a/src/html/partySave.html
+++ b/src/html/partySave.html
@@ -22,6 +22,6 @@
             <button type="submit">모임 생성</button>
         </form>
     </div>
-    <script src="../js/partySave.js"></script>
+    <script src="/src/js/partySave.js"></script>
 </body>
 </html>
