--- a/src/html/partyDetails.html
+++ b/src/html/partyDetails.html
@@ -14,9 +14,9 @@
     <div>
         <button type="button" id="joinPartyBtn">가입하기</button>
     </div>
-    <script src="../js/partyDetails.js"></script>
-    <script src="../js/invitation.js"></script>
+    <script src="/src/js/partyDetails.js"></script>
+    <script src="/src/js/invitation.js"></script>
     <!-- <script src="../js/partyJoin.js"></script> -->
-    <script src="../js/partyMemberSave.js"></script>
+    <script src="/src/js/partyMemberSave.js"></script>
 </body>
 </html>
