--- a/src/html/registration.html
+++ b/src/html/registration.html
@@ -23,6 +23,6 @@
             <button type="submit">가입하기</button>
         </form>
     </div>
-    <script src="../js/registration.js"></script>
+    <script src="/src/js/registration.js"></script>
 </body>
 </html>
