refactor : 경로 변경

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="/src/css/styles.css">
     <title>Assemble</title>
 </head>
 <body>
@@ -12,6 +12,6 @@
     <div>
         <button onclick="window.location.href='partySave.html'">모임생성</button>
     </div>
-    <script src="../js/partys.js"></script>
+    <script src="/src/js/partys.js"></script>
 </body>
 </html>
