refactor : component 추가

--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
 <body>
     <div id="app">
     </div>
-    <div>
-        <button onclick="window.location.href='partySave.html'">모임생성</button>
-    </div>
-    <script src="/src/js/partys.js"></script>
+    <script type="module" src="/src/js/router2.js"></script>
 </body>
 </html>
