--- a/src/html/login.html
+++ b/src/html/login.html
@@ -1,24 +1,10 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/src/css/styles.css">
-    <title>로그인 | Assemble</title>
-</head>
-<body>
-    <div class="login-container">
-        <form id = "login-form">
-            <label for="loginId">아이디:</label>
-            <input type="text" name = "loginId">
-            <label for = "password">비밀번호</label>
-            <input type="password" name="password">
-
-            <button type="submit">로그인</button>
-        </form>
-
-        <button onclick="window.location.href='registration.html'">회원가입</button>
+<div class="login-container">
+    <div id="login-form">
+        <label for="loginId">아이디:</label>
+        <input type="text" id="loginId">
+        <label for="password">비밀번호:</label>
+        <input type="password" id="password">
+        <button id="loginButton">로그인</button>
     </div>
-    <script src="/src/js/login.js"></script>
-</body>
-</html>
+</div>
+
