--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Single+Day&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/src/css/styles2.css">
+    <link rel="stylesheet" href="/src/css/styles.css">
     <title>Assemble</title>
 </head>
 <body>
     <div id="app">
     </div>
-    <script type="module" src="/src/js/router2.js"></script>
+    <script type="module" src="/src/js/router.js"></script>
 </body>
 </html>
